--- a/Drumkit.html
+++ b/Drumkit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JS Drum Kit</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -58,7 +58,6 @@
 <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script src="main.js"></script>
-
 
 </body>
 </html>
